<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/title_movie"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="H,16:8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/poster" />

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/card_poster"
            app:layout_constraintStart_toStartOf="@+id/card_poster"
            app:layout_constraintTop_toBottomOf="@+id/img_poster">

            <ImageView
                android:id="@+id/img_poster2"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:contentDescription="@string/title_movie"
                android:scaleType="centerCrop"
                android:src="@drawable/poster"
                app:layout_constrainedHeight="true"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/poster" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_xxxlarge"
            android:layout_marginRight="@dimen/margin_large"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_poster">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="5dp"
                    android:background="#00000000"
                    android:contentDescription="@string/title_movie"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/title_movie"
                    android:textAlignment="center"
                    android:textIsSelectable="false"
                    android:textSize="24sp"
                    android:textStyle="normal"
                    android:visibility="visible"
                    app:layout_constraintBottom_toTopOf="@+id/rating"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/title_movie" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginEnd="5dp"
                    android:background="#00000000"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:singleLine="false"
                    android:text="@string/user_rating"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title"
                    app:layout_constraintVertical_bias="0.225" />

                <RatingBar
                    android:id="@+id/rb_userrating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="120dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="8dp"
                    android:numStars="5"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:progressTint="@android:color/holo_orange_dark"
                    android:rating="4.4"
                    android:stepSize="0.5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rating" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="-5dp"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_poster">


            <android.support.constraint.ConstraintLayout
                android:id="@+id/root_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:background="@android:color/white"
                android:padding="10dp"
                android:paddingBottom="50dp"
                app:layout_constraintBottom_toBottomOf="parent">


                <TextView
                    android:id="@+id/txt_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="start"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/overview"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/txt_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="start"
                    android:padding="10dp"
                    android:text="@string/description"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/txt_realise"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_overview" />

                <TextView
                    android:id="@+id/txt_realise"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="#00000000"
                    android:bufferType="normal"
                    android:fontFamily="sans-serif-medium"
                    android:padding="10dp"
                    android:text="@string/realise_date"
                    app:layout_constraintBottom_toTopOf="@+id/txt_realise_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_description"
                    tools:text="@string/realise_date" />

                <TextView
                    android:id="@+id/txt_realise_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-light"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_realise"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="@string/realise_date_text" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>